# FL-Plugin-Shoegazer

./: .gitignore  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  build.ps1  installer.iss
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DrumSynthesizer.cpp  DrumSynthesizer.h  EffectsChain.cpp  EffectsChain.h  PresetManager.cpp  PresetManager.h  SamplePlayer.cpp  SamplePlayer.h  ShoegazeSound.h  ShoegazeVoice.cpp  ShoegazeVoice.h  WavetableOscillator.cpp  WavetableOscillator.h
Source/UI/: CustomComponents.cpp  CustomComponents.h  ModernLookAndFeel.cpp  ModernLookAndFeel.h  VisualizerComponent.cpp  VisualizerComponent.h
docs/: BUILD.md  FEATURES.md  QUICKSTART.md  USAGE.md
